--- a/views/create_recommendation.erb
+++ b/views/create_recommendation.erb
@@ -1,6 +1,6 @@
 
 
-<form id='entry' action="/thanks" method="post">
+<form id='entry' action="/create_reccomendation" method="post">
   <input type="text" name="contributor" placeholder="your name!">
   <input type="text" name="place" placeholder="place">
   <input type="text" name="notes" placeholder="add some notes">
